...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.v4.widget.SwipeRefreshLayout>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email"/>

...
